alarme incendie chez moi, je push en vitesse

--- a/projet-web/templates/my_communities/index.html.twig
+++ b/projet-web/templates/my_communities/index.html.twig
@@ -1,10 +1,10 @@
 {% extends 'base.html.twig' %}
-{% import 'home/home.twig' as home  %}
+
+{% import 'navbar/navbar.twig' as nav  %}
 
 {% block stylesheets %}
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 <link rel="stylesheet" href="/styles/themes/{{theme}}/bootstrap.min.css">
-<link rel="stylesheet" href="/styles/home/home.css">
 {% endblock %}
 
 {% block javascripts %}
@@ -13,14 +13,12 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 {% endblock %}
 
-{% block title %}{% trans %}Home{% endtrans %}{% endblock %}
+{% block title %}My Communities{% endblock %}
 
 {% block body %}
-<div class="container h-100" >
-    {% if loggedin %}
-        {% include 'home/home.twig'  %}
-    {% else %}
-        {% include 'home/login.twig'  %}
-    {% endif %}
+<div class="container h-100">
+    {{ nav.navbar(nav_theme) }}
+
+    <h1>TO DO</h1>
 </div>
 {% endblock %}
