--- a/projet-web/templates/home/home.twig
+++ b/projet-web/templates/home/home.twig
@@ -1,26 +1,11 @@
-{% macro login_form(action = "/", method = "POST") %}
-    <h1 class="text-center"><b>Log In</b></h1>
-    <form action="{{action}}" method="{{method}}">
-        <div class="form-group">
-            <input type="text" class="form-control" id="pseudo" name="pseudo" placeholder="Enter pseudo"/>
-        </div>
-        <div class="form-group">
-            <input type="password" class="form-control" id="password" name="password" placeholder="Enter password"/>
-        </div>
-        <input type="submit" class="btn btn-primary" id="login" name="login" value="Log In"/>
-        <input type="submit" class="btn btn-default" id="signup" name="signup" value="Sign Up"/>
-    </form>
-{% endmacro %}
-
-{% macro welcome_page(nextEvent = null, commuFlow = null) %}
-    {% import "home/welcome_page.components.twig" as welcome_components %}
-    {{ welcome_components.navbar() }}
-    <div class="row justify-content-center align-items-center h-100">
-        <div class="col-md-6 h-100">
-            {{ welcome_components.showNextEvent(nextEvent) }}
-        </div>
-        <div class="col-md-6 h-100">
-            {{ welcome_components.showCommuFlow(commuFlow) }}
-        </div>
+{% import "home/home.components.twig" as home %}
+{% import 'navbar/navbar.twig' as nav  %}
+{{ nav.navbar(loggedin, nav_theme) }}
+<div class="row justify-content-center align-items-center h-100">
+    <div class="col-md-6 h-100">
+        {{ home.showNextEvent(nextEvent) }}
     </div>
-{% endmacro %}
+    <div class="col-md-6 h-100">
+        {{ home.showCommuFlow(commuFlow) }}
+    </div>
+</div>
