--- a/projet-web/templates/nav_barre/navbar.twig
+++ b/projet-web/templates/nav_barre/navbar.twig
@@ -1,7 +1,8 @@
-{% macro navbar(loggedin = false, nav_theme = "navbar-light") %}
+{% macro navbar(nav_theme = "navbar-light", nav_settings = []) %}
+    {% import 'nav_barre/navbar.components.twig' as nav_components %}
     <nav class="navbar navbar-expand-lg {{nav_theme}}">
-        <a class="navbar-brand" href="/">PJW</a>
-        {% if loggedin %}
+        <a class="navbar-brand mr-auto" href="">PJW</a>
+        {% if app.session.get('token') %}
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#subMenus" aria-expanded="false" aria-controls="subMenus" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -9,13 +10,13 @@
             <div class="collapse navbar-collapse" id="subMenus">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="/my/communities">{% trans %}My Communities{% endtrans %}</a>
+                        <a class="nav-link" href="/{{app.request.locale}}/my/communities">{% trans %}My Communities{% endtrans %}</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/public/communities">{% trans %}Public Communities{% endtrans %}</a>
+                        <a class="nav-link" href="/{{app.request.locale}}/public/communities">{% trans %}Public Communities{% endtrans %}</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/public/events">{% trans %}Public Events{% endtrans %}</a>
+                        <a class="nav-link" href="/{{app.request.locale}}/public/events">{% trans %}Public Events{% endtrans %}</a>
                     </li>
                 </ul>
                 <form class="form-inline my-2 my-lg-0">
@@ -28,18 +29,21 @@
                         </span>
                     </button>
                 </form>
-                <form class="form-inline my-2 my-lg-0">
-                    <button class="btn my-2 my-sm-0" type="submit">
+                <div class="my-2 my-lg-0">
+                    {{ nav_components.parameters(nav_settings) }}
+                    <a class="btn my-2 my-sm-0" href="/{{app.request.locale}}/logout">
                         <span>
-                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-gear-fill" viewBox="0 0 16 16">
-                                <path d="M9.405 1.05c-.413-1.4-2.397-1.4-2.81 0l-.1.34a1.464 1.464 0 0 1-2.105.872l-.31-.17c-1.283-.698-2.686.705-1.987 1.987l.169.311c.446.82.023 1.841-.872 2.105l-.34.1c-1.4.413-1.4 2.397 0 2.81l.34.1a1.464 1.464 0 0 1 .872 2.105l-.17.31c-.698 1.283.705 2.686 1.987 1.987l.311-.169a1.464 1.464 0 0 1 2.105.872l.1.34c.413 1.4 2.397 1.4 2.81 0l.1-.34a1.464 1.464 0 0 1 2.105-.872l.31.17c1.283.698 2.686-.705 1.987-1.987l-.169-.311a1.464 1.464 0 0 1 .872-2.105l.34-.1c1.4-.413 1.4-2.397 0-2.81l-.34-.1a1.464 1.464 0 0 1-.872-2.105l.17-.31c.698-1.283-.705-2.686-1.987-1.987l-.311.169a1.464 1.464 0 0 1-2.105-.872l-.1-.34zM8 10.93a2.929 2.929 0 1 1 0-5.86 2.929 2.929 0 0 1 0 5.858z"/>
+                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-door-open-fill" viewBox="0 0 16 16">
+                                <path d="M1.5 15a.5.5 0 0 0 0 1h13a.5.5 0 0 0 0-1H13V2.5A1.5 1.5 0 0 0 11.5 1H11V.5a.5.5 0 0 0-.57-.495l-7 1A.5.5 0 0 0 3 1.5V15H1.5zM11 2h.5a.5.5 0 0 1 .5.5V15h-1V2zm-2.5 8c-.276 0-.5-.448-.5-1s.224-1 .5-1 .5.448.5 1-.224 1-.5 1z"/>
                             </svg>
                         </span>
-                    </button>
-                </form>
+                    </a>
+                </div>
             </div>
         {% else %}
-            
+            <div class="my-2 my-lg-0">
+                {{ nav_components.parameters(nav_settings) }}
+            </div>
         {% endif %}
     </nav>
 {% endmacro %}
