--- a/projet/templates/base.html.twig
+++ b/projet/templates/base.html.twig
@@ -3,17 +3,58 @@
     <head>
         <meta charset="UTF-8">
         <title>{% block title %}Welcome!{% endblock %}</title>
-        {# Run `composer require symfony/webpack-encore-bundle`
-           and uncomment the following Encore helpers to start using Symfony UX #}
         {% block stylesheets %}
-            {#{{ encore_entry_link_tags('app') }}#}
         {% endblock %}
 
         {% block javascripts %}
-            {#{{ encore_entry_script_tags('app') }}#}
         {% endblock %}
+
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+
     </head>
     <body>
-        {% block body %}{% endblock %}
+        <nav class="navbar navbar-default">
+            <div class="container-fluid">
+                <div class="navbar-header">
+                    <a class="navbar-brand" href="{{ path('home_indexe') }}">
+                        <span class="glyphicon glyphicon-home">
+                    </a>
+                </div>
+        
+                <div class="collapse navbar-collapse">
+                    <ul class="nav navbar-nav navbar-left">
+                        <li class="nav-item">
+                            <a href="{{ path('community_index') }}" class="nav-link">{{'community'|trans}}</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="{{ path('event_index') }}" class="nav-link">{{'event'|trans}}</a>
+                        </li>
+                    </ul>
+                    <ul class="nav navbar-nav navbar-right">
+                        <li class="dropdown">
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" id="dropdownMenu1" role="button" aria-haspopup="true" aria-expanded="false">
+                                <span class="glyphicon glyphicon-globe"></span><span class="caret"</span></a>
+                            <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+                                {% for key,locale in locales %}
+                                    <li><a href="{{ path(app.request.get('_route'),
+                                    app.request.attributes.get('_route_params')|merge({'_locale':key})) }}">{{ key }}</a></li>
+                                {% endfor %}
+                            </ul>
+                        </li>
+                        {% if app.user %}
+                        <li>
+                            <a href="{{ path('app_logout') }}"><span class="glyphicon glyphicon-log-out"></a>
+                        </li>
+                        {% endif %}
+                    </ul>
+                </div>
+            </div>
+        </nav>
+        <div class="container">
+            {% block body %}{% endblock %}
+        </div>
     </body>
 </html>
