--- a/projet/templates/event/new.html.twig
+++ b/projet/templates/event/new.html.twig
@@ -7,5 +7,5 @@
 
     {{ include('event/_form.html.twig') }}
 
-    <a href="{{ path('event_index') }}">{{'back'|trans}}</a>
+    <a class="btn btn-default" href="{{ path('event_index') }}">{{'back'|trans}}</a>
 {% endblock %}
